test/typeerrors/Heuristics/SimilarFunction3.hs
module SimilarFunction3 where

floatSum :: [Float] -> Float
floatSum = foldr (+) 0.0 
